--- a/03-DOM&HandlingEvents/translate.html
+++ b/03-DOM&HandlingEvents/translate.html
@@ -10,6 +10,10 @@
 			function textPL(element){
 				element.innerHTML = "Kije i kamienie kości mi połamią, ale twoje słowa nigdy mnie nie zranią"
 			}
+			
+			function textEN(element){
+				element.innerHTML = "Sticks and stones may break my bones, but words will never harm me."
+			}
 		</script>
 	</body>
 </html>
