--- a/04-JSON&DataTransfer/student.html
+++ b/04-JSON&DataTransfer/student.html
@@ -7,11 +7,21 @@
 	<body>
 		<h1>Student</h1>
 		<p>Open a console and then click the button</p>
-		<input type="button" value="Display student's data">
+		<input type="button" value="Display student's data" onclick="fetchData()">
 		<p id="personalData"></p>
 
 		<script>
-
+			function fetchData(){
+				const xhr = new XMLHttpRequest();
+				xhr.onreadystatechange = function() {
+					if (this.readyState === 4 && this.status === 200) {
+						let item = JSON.parse(xhr.response)[0];
+						document.getElementById("personalData").innerHTML = `${item.name} ${item.surname}`;
+					}
+				};
+				xhr.open('GET', 'https://graydelta.github.io/bai/04-JSON&DataTransfer/data.json');
+				xhr.send();
+			}
 		</script>
 
 	</body>
