--- a/05-VueFundamentals/films.html
+++ b/05-VueFundamentals/films.html
@@ -3,7 +3,42 @@
 <head>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
+
+<style>
+  table {
+    border-collapse: collapse;
+  }
+  th {
+    font-weight: 700;
+  }
+  td, th{
+    border: 1px solid black;
+    padding: 5px;
+    text-align: left;
+    min-width: 120px;
+  }
+</style>
 <body>
+  <div id="app">
+    <table>
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th>Year</th>
+          <th>Director</th>
+          <th>Budget</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr v-for="(film, index) in films" :key="index">
+          <td>{{film.title}}</td>
+          <td>{{film.year}}</td>
+          <td>{{film.director}}</td>
+          <td>{{film.budget}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
   <script>
     var app = new Vue({
       el: '#app',
@@ -34,8 +69,7 @@
             budget: 6000000
           }
         ] 
-        }
-      }
+      } 
     });
   </script>
 </body>
