--- a/05-VueFundamentals/todo.html
+++ b/05-VueFundamentals/todo.html
@@ -4,6 +4,13 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
+  <div id="app">
+    <ol>
+      <li v-for="(entry, index) in sortedList" :key="index">
+        {{ entry }}
+      </li>
+    </ol>
+  </div>
   <script>
     var app = new Vue({
       el: '#app',
@@ -13,6 +20,12 @@
           'Feed cat',
           'Pay cable bill',
           'Go shopping'
+        ]
+      },
+      computed: {
+        sortedList() {
+          return this.todo.sort();
+        }
       }
     });
   </script>
