--- a/06-VueDataBinding/todo.html
+++ b/06-VueDataBinding/todo.html
@@ -11,9 +11,9 @@
     <button type="button" @click="add()">Add</button>
     <h3>To Do List</h3>
     <ol>
-      <li>...</li>
-      <li>...</li>
-      <li>...</li>
+      <li v-for="(todo, index) in todos" :key="index" v-on:dblclick="handleDoubleClick($event)">
+        {{ todo }}
+      </li>
     </ol>
   </div>
   <script>
@@ -26,8 +26,11 @@
       methods: {
         add: function() {
           this.todos.push(this.todo);
+        },
+        handleDoubleClick(event) {
+          event.toElement.remove()
         }
-      }
+      },
     });
   </script>
 </body>
