--- a/06-VueDataBinding/bmi.html
+++ b/06-VueDataBinding/bmi.html
@@ -7,15 +7,27 @@
   <h1>Body Mass Index</h1>
   <div id="app">
     <span>Waga: </span>
-    <input> kg<br>
+    <input type="text" v-model="weight"> kg<br>
     <span>Wzrost: </span>
-    <input> cm
-    <p>Wskaźnik BMI:</p>
+    <input type="text" v-model="height"> cm
+    <p>Wskaźnik BMI: {{calculate}}</p>
   </div>
   <script>
     var app = new Vue({
       el: '#app',
       data: {
+        weight: "",
+        height: ""
+      },
+      computed: {
+        calculate: function() {
+          var vm = this;
+          const bmi = (parseFloat(vm.weight)/(parseFloat(vm.height)/100 * parseFloat(vm.height)/100));
+          if (bmi) {
+            return bmi.toFixed(2)
+          }
+          return "--"
+        }
       }
     });
   </script>
